--- a/app/src/main/res/layout/activity_slide.xml
+++ b/app/src/main/res/layout/activity_slide.xml
@@ -4,35 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/PrimaryColorDark"
-    tools:context=".SplashActivity">
-
+    tools:context=".Slide">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
-        android:layout_weight ="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="123dp"
-            android:layout_height="154dp"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/icons8_greentech" />
-
-        <ProgressBar
-            android:id="@+id/Splash_progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_marginTop="120px"
+            android:id="@+id/imageView4"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="551dp"
+            app:srcCompat="@drawable/saveplanet" />
 
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
