--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,8 +16,8 @@
     <style name="Splash.theme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/PrimaryColor</item>
-        <item name="colorPrimaryVariant">@color/PrimaryColor</item>
-        <item name="colorOnPrimary">@color/PrimaryColor</item>
+        <item name="colorPrimaryVariant">@color/PrimaryColorDark</item>
+        <item name="colorOnPrimary">@color/ColorWhite</item>
         <!-- Secondary brand color. -->
         <!--  <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>-->
